[tool.poetry]
name = "fake-ssh"
version = "0.1.0"
description = "Fakes an SSH Server"
authors = ["David Sternlicht <dsternlicht@infinidat.com>"]
include = ["fake_ssh/server_key"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/d1618033/fake-ssh.git"
homepage = "https://github.com/d1618033/fake-ssh.git"
keywords = [
    "SSH",
    "Server",
    "Mocking",
    "Mock",
    "Testing",
]

[tool.poetry.scripts]
echo_server = "fake_ssh.demo.echo_server:main"

[tool.poetry.dependencies]
python = "^3.7"
Logbook = "^1.5.3"
paramiko = "^2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable="""
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
"""
