[tool.poetry]
name = "fakessh"
version = "0.1.0"
description = "Fakes an SSH Server"
authors = ["BoPo Wang <ibopo@126.com>"]
include = ["fakessh/server_key"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bopo/fakessh.git"
homepage = "https://github.com/bopo/fakessh.git"
keywords = [
    "SSH",
    "Server",
    "Mocking",
    "Mock",
    "Testing",
]

[tool.poetry.scripts]
echo_server = "fakessh.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
Logbook = "^1.5.3"
paramiko = "^2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--strict-markers -p no:warnings"
markers = 'fails_on_windows: This test is known to fail on win32 systems.'

[tool.pylint."MESSAGES CONTROL"]
disable="""
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
"""
